hphp/hack/test/typecheck/global_const7.php.exp
File "global_const7.php", line 3, characters 11-11:
Invalid expression in constant initializer (Parsing[1002])
