hphp/hack/test/typecheck/global_const7.php
<?hh // partial

const X = $y;
